src/main/java/com/example/cto/error/exceptions/IncorrectDataException.java
package com.example.cto.error.exceptions;

public class IncorrectDataException extends RuntimeException{
    public IncorrectDataException(String message) {
        super(message);
    }
}
